corect spacing of h ocat for desktop and small screens; finish egghatching svg by adding wiggling ears and blinking, as well as restructure the link in contact; finish animating the ears and eyelids; correct contact-question references

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -157,6 +157,19 @@
 	}
 }
 
+#email-link {
+	padding-bottom: 1rem;
+	border-bottom: 1px solid $neon-pink;
+	transform: scale(0);
+	transition: transform 150ms linear;
+	transform-origin: center;
+
+	&.shown {
+		position: absolute;
+		transform: scale(1);
+	}
+}
+
 .container--contact-animation {
 	width: 100%;
 	position: relative;
@@ -168,7 +181,7 @@
 	margin-bottom: 2rem;
 }
 
-#email-link {
+#container--egg-hatcher {
 	width: 100%;
 	margin: 0;
 	padding: 0;
@@ -192,7 +205,7 @@
 }
 
 @media screen and (min-width: $small) {
-	#email-link {
+	#container--egg-hatcher {
 		position: static;
 
 		svg {
